--- a/StrivrTest/StrivrTest/Base.lproj/Main.storyboard
+++ b/StrivrTest/StrivrTest/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                         <rect key="frame" x="0.0" y="92" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mnj-kt-jJH" id="fOm-CO-X7X">
-                                            <frame key="frameInset" width="375" height="43.5"/>
+                                            <frame key="frameInset" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TbP-mg-3vA">
@@ -122,7 +122,7 @@
                                         <rect key="frame" x="0.0" y="92" width="375" height="198"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9Ly-Ov-Bkj" id="zGo-V0-lmf">
-                                            <frame key="frameInset" width="375" height="197.5"/>
+                                            <frame key="frameInset" width="375" height="198"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vn7-Bk-l1k">
@@ -155,12 +155,12 @@
                                                     <constraints>
                                                         <constraint firstItem="aLs-na-w88" firstAttribute="width" secondItem="Vn7-Bk-l1k" secondAttribute="width" multiplier="1/3" id="64k-AK-JPL"/>
                                                         <constraint firstItem="aLs-na-w88" firstAttribute="height" secondItem="Vn7-Bk-l1k" secondAttribute="height" id="8ZM-HM-2af"/>
-                                                        <constraint firstAttribute="trailing" secondItem="NPh-Ja-lnD" secondAttribute="trailing" id="AQM-mD-13e"/>
                                                         <constraint firstItem="aLs-na-w88" firstAttribute="leading" secondItem="Vn7-Bk-l1k" secondAttribute="leading" id="F78-7k-X3F"/>
-                                                        <constraint firstItem="NPh-Ja-lnD" firstAttribute="centerY" secondItem="Vn7-Bk-l1k" secondAttribute="centerY" id="ICh-mx-49x"/>
-                                                        <constraint firstItem="NPh-Ja-lnD" firstAttribute="width" secondItem="Vn7-Bk-l1k" secondAttribute="width" multiplier="2/3" id="NbI-0p-aOl"/>
-                                                        <constraint firstItem="NPh-Ja-lnD" firstAttribute="height" secondItem="Vn7-Bk-l1k" secondAttribute="height" id="hT9-qr-ygu"/>
+                                                        <constraint firstItem="NPh-Ja-lnD" firstAttribute="width" secondItem="Vn7-Bk-l1k" secondAttribute="width" multiplier="2/3" id="RPq-AM-ZUw"/>
+                                                        <constraint firstAttribute="trailing" secondItem="NPh-Ja-lnD" secondAttribute="trailing" id="S3b-2d-HFJ"/>
+                                                        <constraint firstItem="NPh-Ja-lnD" firstAttribute="height" secondItem="Vn7-Bk-l1k" secondAttribute="height" id="UtU-fj-rYn"/>
                                                         <constraint firstItem="aLs-na-w88" firstAttribute="centerY" secondItem="Vn7-Bk-l1k" secondAttribute="centerY" id="kPo-5p-tSm"/>
+                                                        <constraint firstItem="NPh-Ja-lnD" firstAttribute="centerY" secondItem="Vn7-Bk-l1k" secondAttribute="centerY" id="pUh-8A-B5z"/>
                                                     </constraints>
                                                 </stackView>
                                             </subviews>
@@ -191,7 +191,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="authorTableView" destination="vYH-Xe-JZ2" id="Stt-9q-enz"/>
+                        <outlet property="commitsByAuthorTableView" destination="vYH-Xe-JZ2" id="6s6-4C-8lL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
