--- a/StrivriOSTest/StrivriOSTest/Base.lproj/Main.storyboard
+++ b/StrivriOSTest/StrivriOSTest/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="149" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wd8-CC-mpa">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="149" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wd8-CC-mpa">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="authorInfo" rowHeight="149" id="eXM-PU-LDN" customClass="AuthorCustomTableViewCell" customModule="StrivriOSTest" customModuleProvider="target">
@@ -41,18 +41,26 @@
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Commits:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wfL-Y1-USH">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzL-Kj-y8j">
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wfL-Y1-USH">
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstItem="t0t-51-o7t" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/2" id="5Ah-Gr-On9"/>
-                                                                <constraint firstItem="wfL-Y1-USH" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/2" id="DBz-gZ-zvg"/>
+                                                                <constraint firstItem="t0t-51-o7t" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/3" id="5Ah-Gr-On9"/>
+                                                                <constraint firstItem="wfL-Y1-USH" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/3" id="DBz-gZ-zvg"/>
+                                                                <constraint firstItem="bzL-Kj-y8j" firstAttribute="width" secondItem="HNz-zt-4QI" secondAttribute="width" id="Hkg-tb-FKM"/>
                                                                 <constraint firstItem="t0t-51-o7t" firstAttribute="width" secondItem="HNz-zt-4QI" secondAttribute="width" id="QyO-v7-aa6"/>
                                                                 <constraint firstItem="t0t-51-o7t" firstAttribute="leading" secondItem="HNz-zt-4QI" secondAttribute="leading" id="cgp-EB-P9g"/>
+                                                                <constraint firstItem="bzL-Kj-y8j" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/3" id="eTj-Q4-B4W"/>
                                                                 <constraint firstItem="wfL-Y1-USH" firstAttribute="width" secondItem="HNz-zt-4QI" secondAttribute="width" id="paQ-qh-A1V"/>
+                                                                <constraint firstItem="bzL-Kj-y8j" firstAttribute="leading" secondItem="HNz-zt-4QI" secondAttribute="leading" id="vAo-vt-IlL"/>
                                                                 <constraint firstItem="wfL-Y1-USH" firstAttribute="leading" secondItem="HNz-zt-4QI" secondAttribute="leading" id="vPf-hK-Xfp"/>
                                                             </constraints>
                                                         </stackView>
@@ -78,10 +86,11 @@
                                             <constraint firstItem="F1d-4u-AkN" firstAttribute="centerY" secondItem="eXM-PU-LDN" secondAttribute="centerY" id="c9E-Ox-wZ8"/>
                                         </constraints>
                                         <connections>
-                                            <outlet property="commitsLabel" destination="wfL-Y1-USH" id="9Qm-cR-anO"/>
+                                            <outlet property="dateLabel" destination="bzL-Kj-y8j" id="ePG-Jf-fAd"/>
+                                            <outlet property="messageLabel" destination="wfL-Y1-USH" id="sVc-E9-fX8"/>
                                             <outlet property="userAvatarImageView" destination="QUg-fq-DZz" id="Aoj-dw-Lgj"/>
                                             <outlet property="usernameLabel" destination="t0t-51-o7t" id="eIB-Rs-TIL"/>
-                                            <segue destination="YiQ-m1-6cl" kind="show" identifier="authorCommits" id="dc8-1D-HUB"/>
+                                            <segue destination="8Fj-81-I9a" kind="show" identifier="webView" id="c4v-Hb-PtQ"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -103,100 +112,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="134.48275862068968"/>
-        </scene>
-        <!--Commits View Controller-->
-        <scene sceneID="SYT-1V-VBU">
-            <objects>
-                <viewController id="YiQ-m1-6cl" customClass="CommitsViewController" customModule="StrivriOSTest" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="XrB-AN-Dfo"/>
-                        <viewControllerLayoutGuide type="bottom" id="p74-sE-xtq"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="gPV-Ed-E5c">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="149" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Mk7-cD-gQc">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="recentCommits" id="e2u-e7-ycz" customClass="CommitsCustomTableViewCell" customModule="StrivriOSTest" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="375" height="149"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e2u-e7-ycz" id="E1D-rp-iyc">
-                                            <frame key="frameInset" width="375" height="148"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E48-C9-qy2">
-                                                    <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ttS-br-EXK">
-                                                            <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
-                                                        </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qBD-7W-Kt1">
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cTw-nw-kma">
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xo4-p1-5Oe">
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstItem="xo4-p1-5Oe" firstAttribute="width" secondItem="qBD-7W-Kt1" secondAttribute="width" id="FVA-Rr-mWH"/>
-                                                                <constraint firstItem="xo4-p1-5Oe" firstAttribute="leading" secondItem="qBD-7W-Kt1" secondAttribute="leading" id="Nsn-a4-RO4"/>
-                                                                <constraint firstItem="cTw-nw-kma" firstAttribute="height" secondItem="qBD-7W-Kt1" secondAttribute="height" multiplier="1/2" id="TZG-Em-puz"/>
-                                                                <constraint firstItem="cTw-nw-kma" firstAttribute="width" secondItem="qBD-7W-Kt1" secondAttribute="width" id="XBK-kE-51k"/>
-                                                                <constraint firstItem="cTw-nw-kma" firstAttribute="leading" secondItem="qBD-7W-Kt1" secondAttribute="leading" id="ghJ-J5-X91"/>
-                                                                <constraint firstItem="xo4-p1-5Oe" firstAttribute="height" secondItem="qBD-7W-Kt1" secondAttribute="height" multiplier="1/2" id="mPG-6F-9Mf"/>
-                                                            </constraints>
-                                                        </stackView>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="qBD-7W-Kt1" firstAttribute="height" secondItem="E48-C9-qy2" secondAttribute="height" id="6zo-ja-uVP"/>
-                                                        <constraint firstItem="ttS-br-EXK" firstAttribute="width" secondItem="E48-C9-qy2" secondAttribute="width" multiplier="1/3" id="QsH-l5-wHv"/>
-                                                        <constraint firstAttribute="trailing" secondItem="qBD-7W-Kt1" secondAttribute="trailing" id="fQr-B8-6lH"/>
-                                                        <constraint firstItem="ttS-br-EXK" firstAttribute="centerY" secondItem="E48-C9-qy2" secondAttribute="centerY" id="jkv-pc-cOb"/>
-                                                        <constraint firstItem="ttS-br-EXK" firstAttribute="leading" secondItem="E48-C9-qy2" secondAttribute="leading" id="xiB-PP-jj3"/>
-                                                        <constraint firstItem="qBD-7W-Kt1" firstAttribute="width" secondItem="E48-C9-qy2" secondAttribute="width" multiplier="2/3" id="yEh-ED-6R9"/>
-                                                        <constraint firstItem="ttS-br-EXK" firstAttribute="height" secondItem="E48-C9-qy2" secondAttribute="height" id="z8A-8r-b3U"/>
-                                                    </constraints>
-                                                </stackView>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <constraints>
-                                            <constraint firstItem="E48-C9-qy2" firstAttribute="height" secondItem="e2u-e7-ycz" secondAttribute="height" id="Cfk-wm-VhI"/>
-                                            <constraint firstItem="E48-C9-qy2" firstAttribute="width" secondItem="e2u-e7-ycz" secondAttribute="width" id="Q07-Co-HiK"/>
-                                            <constraint firstItem="E48-C9-qy2" firstAttribute="centerX" secondItem="e2u-e7-ycz" secondAttribute="centerX" id="Ysx-vt-NoK"/>
-                                            <constraint firstItem="E48-C9-qy2" firstAttribute="centerY" secondItem="e2u-e7-ycz" secondAttribute="centerY" id="itF-VQ-aHV"/>
-                                        </constraints>
-                                        <connections>
-                                            <outlet property="dateLabel" destination="cTw-nw-kma" id="dZ6-y9-kTa"/>
-                                            <outlet property="gitImageView" destination="ttS-br-EXK" id="I8G-aw-YuR"/>
-                                            <outlet property="messageLabel" destination="xo4-p1-5Oe" id="Bh9-Zr-e1o"/>
-                                            <segue destination="8Fj-81-I9a" kind="show" identifier="webView" id="cV8-lY-k2Y"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Mk7-cD-gQc" firstAttribute="height" secondItem="gPV-Ed-E5c" secondAttribute="height" id="BeO-lf-fkw"/>
-                            <constraint firstItem="Mk7-cD-gQc" firstAttribute="centerX" secondItem="gPV-Ed-E5c" secondAttribute="centerX" id="CIF-hK-7mw"/>
-                            <constraint firstItem="Mk7-cD-gQc" firstAttribute="centerY" secondItem="gPV-Ed-E5c" secondAttribute="centerY" id="lAe-Fi-uM2"/>
-                            <constraint firstItem="Mk7-cD-gQc" firstAttribute="width" secondItem="gPV-Ed-E5c" secondAttribute="width" id="oVo-xA-t3I"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="commitsTableView" destination="Mk7-cD-gQc" id="Srl-XM-mig"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LTE-M3-D2c" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1826" y="134"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="7zB-a3-awR">
@@ -228,7 +143,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="myq-3I-qO2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2630" y="134"/>
+            <point key="canvasLocation" x="1921" y="134"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CBL-G1-AIH">
