--- a/StrivriOSTest/StrivriOSTest/Base.lproj/Main.storyboard
+++ b/StrivriOSTest/StrivriOSTest/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="149" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wd8-CC-mpa">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" sectionIndexMinimumDisplayRowCount="6" rowHeight="149" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wd8-CC-mpa">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="authorInfo" rowHeight="149" id="eXM-PU-LDN" customClass="AuthorCustomTableViewCell" customModule="StrivriOSTest" customModuleProvider="target">
@@ -41,24 +41,24 @@
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzL-Kj-y8j">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message:" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wfL-Y1-USH">
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wfL-Y1-USH">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzL-Kj-y8j">
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstItem="t0t-51-o7t" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/3" id="5Ah-Gr-On9"/>
-                                                                <constraint firstItem="wfL-Y1-USH" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/3" id="DBz-gZ-zvg"/>
+                                                                <constraint firstItem="t0t-51-o7t" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/4" id="5Ah-Gr-On9"/>
+                                                                <constraint firstItem="wfL-Y1-USH" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/2" id="DBz-gZ-zvg"/>
                                                                 <constraint firstItem="bzL-Kj-y8j" firstAttribute="width" secondItem="HNz-zt-4QI" secondAttribute="width" id="Hkg-tb-FKM"/>
                                                                 <constraint firstItem="t0t-51-o7t" firstAttribute="width" secondItem="HNz-zt-4QI" secondAttribute="width" id="QyO-v7-aa6"/>
                                                                 <constraint firstItem="t0t-51-o7t" firstAttribute="leading" secondItem="HNz-zt-4QI" secondAttribute="leading" id="cgp-EB-P9g"/>
-                                                                <constraint firstItem="bzL-Kj-y8j" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/3" id="eTj-Q4-B4W"/>
+                                                                <constraint firstItem="bzL-Kj-y8j" firstAttribute="height" secondItem="HNz-zt-4QI" secondAttribute="height" multiplier="1/4" id="eTj-Q4-B4W"/>
                                                                 <constraint firstItem="wfL-Y1-USH" firstAttribute="width" secondItem="HNz-zt-4QI" secondAttribute="width" id="paQ-qh-A1V"/>
                                                                 <constraint firstItem="bzL-Kj-y8j" firstAttribute="leading" secondItem="HNz-zt-4QI" secondAttribute="leading" id="vAo-vt-IlL"/>
                                                                 <constraint firstItem="wfL-Y1-USH" firstAttribute="leading" secondItem="HNz-zt-4QI" secondAttribute="leading" id="vPf-hK-Xfp"/>
@@ -128,16 +128,20 @@
                             <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jc1-W2-B2j">
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="ejd-LC-mqZ"/>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="ejd-LC-mqZ" firstAttribute="centerX" secondItem="jc1-W2-B2j" secondAttribute="centerX" id="AxD-PP-TyZ"/>
                             <constraint firstItem="jc1-W2-B2j" firstAttribute="width" secondItem="4S0-Vg-q6H" secondAttribute="width" id="P9Y-mD-hMe"/>
                             <constraint firstItem="jc1-W2-B2j" firstAttribute="centerY" secondItem="4S0-Vg-q6H" secondAttribute="centerY" id="QA5-Hk-ge2"/>
                             <constraint firstItem="jc1-W2-B2j" firstAttribute="centerX" secondItem="4S0-Vg-q6H" secondAttribute="centerX" id="QcU-HF-hVp"/>
                             <constraint firstItem="jc1-W2-B2j" firstAttribute="height" secondItem="4S0-Vg-q6H" secondAttribute="height" id="RVF-MC-fs9"/>
+                            <constraint firstItem="ejd-LC-mqZ" firstAttribute="centerY" secondItem="jc1-W2-B2j" secondAttribute="centerY" id="zKU-WR-FqH"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="ejd-LC-mqZ" id="zb1-wQ-brT"/>
                         <outlet property="webView" destination="jc1-W2-B2j" id="2EU-Ca-eAO"/>
                     </connections>
                 </viewController>
